# MCP-Demo

./: README.md  pyproject.toml
src/human_in_the_loop/: __init__.py  __main__.py  server.py
src/human_in_the_loop/views/: __init__.py  input_dialogue.py
src/mcp_demo/: __init__.py  __main__.py  server.py
src/mcp_demo/views/: __init__.py  test.py
