[project]
name = "hw-mcp-human-in-the-loop"
version = "0.1.0"
description = "Huawei MCP Plugin - Human in the Loop"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "mcp[cli]>=1.13.1",
]

[project.scripts]
human_in_the_loop = "human_in_the_loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/human_in_the_loop"]
